--- a/html/index-english.html
+++ b/html/index-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +11,16 @@
     <div class="dropdown">
       <button type="button" class="dropdown-button">&equiv;</button>
       <div class="dropdown-content">
-        <a href="#about-me">Sobre min</a>
-        <a href="#project-div">Projetos</a>
-        <a href="#professional-section">Educação</a>
-        <a href="#education-section">Experiência</a>
-        <a href="#contact-me">Contate-me</a>
+        <a href="#about-me">About me</a>
+        <a href="#project-div">Projects</a>
+        <a href="#professional-section">Education</a>
+        <a href="#education-section">Experience</a>
+        <a href="#contact-me">Contact me</a>
       </div>
     </div>
     <p class="header-title">jesse-rr</p>
-    <a href="/html/index-english.html">
-      <img src="/stock/general-icon/brl.png" alt="Brasil Flag" class="header-image">
+    <a href="/html/index.html">
+      <img src="/stock/general-icon/brl.png" alt="Brazil Flag" class="header-image">
       <img src="/stock/general-icon/usa.png" alt="USA Flag" class="header-image header--usa">
     </a>
   </header>
@@ -33,7 +33,7 @@
         <div class="profile-box1"></div>
       </div>
       <div class="profile-info">
-        <p class="profile-description"><strong class="strong">Jessé Ricardo Rogério</strong>, um desenvolvedor estudante de 19 anos em busca de oportunidades no mercado, fluente em inglês com gosto por leitura digital, localizado em Palhoça SC.</p>
+        <p class="profile-description"><strong class="strong">Jessé Ricardo Rogério</strong>, a 19-year-old developer student seeking opportunities in the market, fluent in English with a passion for digital reading, located in Palhoça SC.</p>
         <ul class="profile-list">
           <li><a href="mailto:jessericardorogerio@gmail.com" target="_blank"><img src="/stock/contact-icon/email.png" alt="Email" class="profile-contact"></a></li>
           <li><a href="https://github.com/jesse-rr/jesse-rr" target="_blank"><img src="/stock/contact-icon/github.png" alt="GitHub" class="profile-contact"></a></li>
@@ -41,7 +41,7 @@
         </ul>
         <div class="curriculo-div">
           <a class="curriculo-button" href="/stock/Shrek(personagem).jpg" download>
-            <p class="curriculo-title">Currículo</p>
+            <p class="curriculo-title">Resume</p>
             <div class="curriculo-image"></div>
           </a>
         </div>
@@ -94,7 +94,7 @@
         </div>
         <div class="project-information">
           <p class="project-title"><strong>E-commerce</strong></p>
-          <p class="project-text">Estrutura de uma loja online desenvolvida com Java/Spring, arquitetura de microserviços e notificações assíncronas (Kafka | Gmail). Utiliza OpenFeign, Gateway MVC, Config Server, Netflix Eureka, Docker, entre outros...</p>
+          <p class="project-text">Structure of an online store developed with Java/Spring, microservices architecture, and asynchronous notifications (Kafka | Gmail). Uses OpenFeign, Gateway MVC, Config Server, Netflix Eureka, Docker, among others...</p>
           <ul class="project-ul">
             <li class="project-li"><a target="_blank" href="https://github.com/jesse-rr/XALVE-commerce-public"><img class="project-github" src="/stock/contact-icon/github.png" alt="Github page"></a></li>
           </ul>
@@ -106,7 +106,7 @@
         </div>
         <div class="project-information">
           <p class="project-title project-title--even"><strong>Online banking [ON-GOING]</strong></p>
-          <p class="project-text project-text--even">Estrutura de back-end de um banco online, com arquitetura monolítica e notificações de pagamento/lembrança (Kafka). Inclui múltiplos tipos de transações: depósitos, transferências, contas, empréstimos e mais. Além disso, foram feitas duas implementações com APIs externas (Exchange Rate e Address Zip-code).</p>
+          <p class="project-text project-text--even">Back-end structure of an online bank, with a monolithic architecture and payment/reminder notifications (Kafka). Includes multiple transaction types: deposits, transfers, accounts, loans, and more. Additionally, two implementations with external APIs (Exchange Rate and Address Zip-code) were made.</p>
           <ul class="project-ul">
             <li class="project-li"><a target="_blank" href="https://github.com/jesse-rr/jesse-rr"><img class="project-github" src="/stock/contact-icon/github.png" alt="Github page"></a></li>
           </ul>
@@ -114,20 +114,20 @@
       </div>
       <div class="project">
         <div class="project-image">
-          <img class="project-image-resize" src="/stock/reading.png" alt="Reading Plataform">
+          <img class="project-image-resize"  src="/stock/reading.png" alt="Reading Platform">
         </div>
         <div class="project-information">
           <p class="project-title"><strong>[ON-GOING] Reading Platform</strong></p>
-          <p class="project-text">Website focado em métricas (Visualizações/Favoritos/etc.), mecanismos de busca, relacionamentos entre entidades, conteúdo bloqueado por assinatura e mais! Implementação com Paypal inclusa.</p>
+          <p class="project-text">Website focused on metrics (Views/Favorites/etc.), search engines, relationships between entities, subscription-based locked content, and more! Paypal integration included.</p>
           <ul class="project-ul">
-            <li class="project-li"><a target="_blank" href="https://github.com/jesse-rr/jesse-rr"><img class="project-github" src="/stock/contact-icon/github.png" alt="Github page"></a></li>
+            <li class="project-li"><a target="_blank"  href="https://github.com/jesse-rr/jesse-rr"><img class="project-github" src="/stock/contact-icon/github.png" alt="Github page"></a></li>
           </ul>
         </div>
       </div>
     </div>
     <section id="professional-section">
       <div class="professional-div">
-        <p class="professional-div-title">Experiência</p>
+        <p class="professional-div-title">Experience</p>
         <ul class="professional-list">
           <li class="professional-work">
             <p class="professional-title">NOT FOUND</p>
@@ -144,13 +144,13 @@
     </section>
     <section id="education-section">
       <div class="professional-div">
-          <p class="professional-div-title">Educação</p>
+          <p class="professional-div-title">Education</p>
           <ul class="professional-list">
-            <li class="professional-title"><a class="title-a strong" href="https://www.ifsc.edu.br/en/web/campus-sao-jose">Instituto Federal de Santa Catarina [IFSC] - Campus São José</a></li>
-            <li class="professional-desc">Curso: ADS - Análise e Desenvolvimento de Sistemas</li>
-            <li class="professional-desc">Modalidade: Presencial</li>
-            <li class="professional-date"><strong>Duração:</strong> 2024.1 - 2026.1 [2.5 anos] - [Semestre atual: 2024.2]</li>
-            <li class="professional-title"><a class="title-a" href="/html/matriz.html" target="_blank">[Matriz Curricular]</a></li>
+            <li class="professional-title"><a class="title-a strong" href="https://www.ifsc.edu.br/en/web/campus-sao-jose">Instituto Federal de Santa Catarina [IFSC] - São José Campus</a></li>
+            <li class="professional-desc">Course: ADS - Analysis and Development of Systems</li>
+            <li class="professional-desc">Mode: In-person</li>
+            <li class="professional-date"><strong>Duration:</strong> 2024.1 - 2026.1 [2.5 years] - [Current semester: 2024.2]</li>
+            <li class="professional-title"><a class="title-a" href="/html/matriz.html" target="_blank">[Curriculum Matrix]</a></li>
           </ul>
       </div>
     </section>
